<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:layout_width="300dp"
    android:layout_height="450dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="30dp"
    app:cardCornerRadius="30sp"
    android:layout_marginStart="30dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ladder_cards_ImageView"
            android:contentDescription="@string/mob_image"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:paddingTop="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/ladder_cards_ImageView"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_name"
                android:id="@+id/ladder_cards_TextView_Name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:text="@string/hp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/ladder_cards_TextView_HP"/>

        </LinearLayout>
    </RelativeLayout>



</android.support.v7.widget.CardView>